hphp/hack/test/typecheck/switch_fallthrough9.php.new_exhaustivity.exp
ERROR: File "switch_fallthrough9.php", line 16, characters 3-118:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_fallthrough9.php", line 16, characters 11-11:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
